creation d'ancres + alignement des onglets nav + correction bug filtres animaux autorises + suppression de code inutile

--- a/reservia.css
+++ b/reservia.css
@@ -60,7 +60,7 @@ nav li
 
 .border
 {   width: 173px;
-    padding-top: 40px;
+    padding-top: 38px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -210,11 +210,6 @@ h4
 .filtres a:hover
 {   background-color: #0065fc;
     color: white;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    height: 43px;
-    border-radius: 50px;
     box-shadow: .5px .5px 10px grey;}
 
 .filtres p
@@ -256,7 +251,7 @@ h4
     font-size: 15px;}
 
 /*accommodations in marseille*/
-.hebergements
+#hebergements
 {   display: flex;
     margin-top: 25px;
     gap: 30px;}
@@ -434,14 +429,14 @@ aside h2
     align-items: baseline;}
 
 /*activities in Marseille*/
-.activites
+#activites
 {   margin: 30px 0px 60px 0px;}
 
 .blocactivites
 {   display: flex;
     flex-flow: row;
     justify-content: space-between;
-    gap: 20px;}
+    gap: 40px;}
 
 .blocactivites h5
 {   font-size: .9rem;
@@ -463,7 +458,7 @@ aside h2
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 20px;}
+    gap: 40px;}
 
 .imageactivites
 {   background-position: center;
@@ -501,7 +496,7 @@ aside h2
 /*media queries*/
 @media all and (max-width: 805px)
 {
-    .hebergements
+    #hebergements
     {   flex-direction: column;}
 
     aside
@@ -511,7 +506,11 @@ aside h2
     {   order: 2;}
 
     .blocactivites
-    {   flex-direction: column;}
+    {   flex-direction: column;
+        gap: 20px;}
+
+    .mediumsmall
+    {   gap: 20px;}
     
     .blocactivites a
     {   max-height: 180;}
@@ -578,7 +577,7 @@ aside h2
         border-bottom: #f2f2f2 solid 4px;
         padding-bottom: 20px;}
     
-    .filtrages, .activites
+    .filtrages, #activites
     {   margin: 0px 20px;}
     
     .destination
